dark mode fix

--- a/themes/Zen/assets/sass/blog.scss
+++ b/themes/Zen/assets/sass/blog.scss
@@ -1,4 +1,5 @@
 .sep-horizon {
+  transition: border-top-color 0.9s ease-in-out;
   border-top: var(--secondary-color) 1px solid;
   opacity: 0.5;
 }
@@ -10,6 +11,7 @@
     text-align: center;
     margin-top: 40px;
     a {
+      transition: color 0.9s ease-in-out;
       color: var(--primary-color-dark);
       font-family: benton-modern-display, serif;
       font-weight: 600;
@@ -362,7 +364,7 @@
     white-space: nowrap;
     border-radius: 7px;
     margin-top: 5px;
-    
+
     pre {
       overflow: auto;
       display: block;
