--- a/themes/Zen/assets/sass/global.scss
+++ b/themes/Zen/assets/sass/global.scss
@@ -122,7 +122,7 @@ html[data-theme="dark"] {
   text-decoration: none;
   outline: 0;
   border-bottom: solid 0.7px transparent;
-  transition: color 0.3s ease-out, border-bottom-color 0.3s ease-out;
+  transition: color 0.9s ease-in-out, border-bottom-color 0.3s ease-out;
   color: var(--primary-color);
   &:hover {
     text-decoration: none;
@@ -135,7 +135,7 @@ html[data-theme="dark"] {
   text-decoration: none;
   outline: 0;
   border-bottom: solid 1px transparent;
-  transition: color 0.3s ease-out, border-bottom-color 0.3s ease-out;
+  transition: color 0.9s ease-in-out, border-bottom-color 0.3s ease-out;
   color: var(--secondary-text-color);
   :hover {
     text-decoration: none;
@@ -146,6 +146,7 @@ html[data-theme="dark"] {
 
 .badge-normal,
 .badge-normal:hover {
+  transition: background-color 0.9s ease-in-out, color 0.9s ease-in-out, border-color 0.9s ease-in-out;
   cursor: default;
   color: var(--secondary-text-color-light);
   background-color: var(--secondary-color-light);
@@ -160,6 +161,7 @@ html[data-theme="dark"] {
 }
 
 .badge-reverse {
+  transition: background-color 0.9s ease-in-out, color 0.9s ease-in-out, border-color 0.9s ease-in-out;
   cursor: default;
   background-color: var(--primary-color);
   color: var(--primary-text-color);
@@ -280,7 +282,7 @@ html[data-theme="dark"] {
 /* Page body style */
 
 body {
-  transition-property: background-color;
+  transition-property: background-color, color;
   transition-duration: 0.9s;
   transition-timing-function: ease-in-out;
 
